# remix-project

./: .gitignore  CONSTITUTION.md  Cargo.toml  Dockerfile  Dockerfile.python-bridge  Makefile  ORCHIDEAS.md  OctraBridge.java  README.md  architecture.mmd  arkhe  arkhe_agent_os.py  arkhe_cognitive_radio_283_1.py  arkhe_core_v11_6_corrected.py  arkhe_full_stack.py  arkhe_orchestrator_v11_7_1.py  arkhe_os_v11_1_pharos.py  arkhe_os_v11_3.py  arkhe_os_v11_3_1_integrated.py  arkhe_os_v11_3_1_sim_aware.py  arkhe_os_v11_4.py  arkhe_os_v14_0_0.py  arkhe_thz_quantum_manifold_283_2.py  axiarchy_954.lean  buf.gen.yaml  build_v13.py  catedral_arkhe.json  catedral_code_agent.py  cathedral_agent_bridge.py  cathedral_arkhe_v16.1_prod.py  cathedral_arkhe_v16.2_zvec.py  cathedral_arkhe_v16.3_zvec_meta_rust.py  cathedral_arkhe_v16_embodied_final.py  cathedral_memory.db  cathedral_moe_centum.py  cathedral_ontology_v28.yaml  checkpoint_fase1.py  clean_v5_1.py  cognitive_effort_controller.py  cognitive_operators.py  (+81 more)
Cathedral/rust_data_plane/: Cargo.toml
Cathedral/rust_data_plane/src/: lib.rs
arkhe-caster-319-1/: Cargo.toml
arkhe-caster-319-1/src/: caster.rs  lib.rs  linux_metrics.rs  linux_wg_tunnel.rs
arkhe-cathedral-substrato-1200/: .gitignore  Cargo.toml  README.md  cathedral-manifest-v12.10.3.json  manifest_1200.json
arkhe-cathedral-substrato-1200/docs/: FSI_Risk_Matrix_v1.0.0.md  FSI_Whitepaper_v1.0.0.md
arkhe-cathedral-substrato-1200/src/: lib.rs
arkhe-cathedral-substrato-1200/src/chain/: rbb_client_stub.rs
arkhe-cathedral-substrato-1200/src/contracts/: ArkheFederation.sol  ArkheFederation.t.sol
arkhe-cathedral-substrato-1200/src/inference/: federated_router.rs  pattern_engine.rs
arkhe-cathedral-substrato-1200/src/security/: creek_guard_stub.rs
arkhe-os/: Cargo.toml  Makefile
arkhe-os/arkhe-octra-bridge/src/: main.rs
arkhe-os/boot/: bootloader.asm  bootloader.ld
arkhe-os/kernel/: Cargo.toml
arkhe-os/kernel/src/: axiarchy.rs  ipc.rs  isolation.rs  lib.rs  main.rs  memory.rs  scheduler.rs  syscalls.rs  (+1 more)
arkhe-substrato-1300/: Cargo.toml
arkhe-substrato-1300/src/: lib.rs  msa_bridge.rs  pattern_engine.rs  progress_tracker.rs  recursive_improvement.rs
arkhe_brasil_finance_substrate_261/: Cargo.toml  DECRETO_261.md  schema.yaml
arkhe_brasil_finance_substrate_261/src/: lib.rs
arkhe_brasil_finance_substrate_261/tests/: e2e_bcb.rs
arklib/: pyproject.toml
arklib/arklib/: __init__.py  api.py  auto_canonization_1079_1080.py  btfs_depin_storage_1103.py  complex_network_optimization_1088.py  compliance.py  consciousness.py  digital_asset_custody_bridge.py  donations.py  drops_database_bridge_1086.py  dynamic_system_identification_1089.py  economy.py  evolution.py  full_100t_orchestrator.py  goose_cathedral_bridge.py  governance.py  hamiltonian.py  hamiltonian_temporal_implosion.py  healing.py  health.py  hermes_bridge.py  identity.py  immortality.py  interface.py  nexus.py  onchain_canonizer.py  oracle.py  orchestrator_rsi_1076_3.py  passport_gateway.py  quantum_bridge.py  qubes_integration_1101.py  resonance.py
cathedral-33t/: Cargo.toml
cathedral-33t/src/: batching.rs  config.rs  lib.rs  tensor.rs
cathedral-agent/: Cargo.toml
cathedral-agent/examples/: eve_demo.rs  flue_deploy_demo.rs  opencut_demo.rs
cathedral-agent/src/: lib.rs
cathedral-agi-omega/: MAIN_ENTRYPOINT.py  README.md  pyproject.toml
cathedral-agi-omega/AUTO_RSI/: architecture_search.py  code_synthesis_agent.py  safe_extraction_pipeline.py
cathedral-agi-omega/CATHEDRAL_OS/: self_healing_monitor.py  task_scheduler.py
cathedral-agi-omega/GLOBAL_DISTRIBUTED_TRAINING/: fsdp_coordinator.py  mpc_gradient_aggregator.py
cathedral-agi-omega/HUMAN_INTERFACE/: governance_dashboard.py  threshold_mobile_app.py
cathedral-agi-omega/LEAN4_SUPEREGO/: CathedralAGI.lean
cathedral-agi-omega/MULTIMODAL_ENCODERS/: audio_handler.py  vision_to_ontology.py
cathedral-agi-omega/NEURO_SYMBOLIC_ENGINE/: episodic_memory.py  mcts_planner.py  neuro_symbolic_bridge.py
cathedral-agi-omega/SOVEREIGN_ECONOMICS/: pouw_verifier.py  token_minter.py
cathedral-agi-omega/TOOL_USE_SANDBOX/: api_oblivious_transfer.py  zk_docker_executor.py
cathedral-arkhe/: Makefile  pyproject.toml
cathedral-arkhe-crawler/: Cargo.toml  CrawlAttestationView.json  Sovereign_Web_Crawler_Vision.md
cathedral-arkhe-crawler/examples/: crawler_demo.rs
cathedral-arkhe-crawler/src/: lib.rs
cathedral-arkhe-v26/: Cargo.toml  README.md  build.sh  tensorzkp_kernels.cu
cathedral-arkhe-v26/src/: lib.rs
cathedral-arkhe/cathedral/: __init__.py  _config.py  _version.py  constants.py  types.py
cathedral-arkhe/cathedral_arkhe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cathedral-arkhe/config/: cathedral.site.yaml
cathedral-arkhe/scripts/: convert_to_gguf.py  run_meta_attack.py
cathedral-arkhe/tests/: conftest.py  test_vector_theosis.py
cathedral-blockchain/: Cargo.toml
cathedral-blockchain/contracts/: AGIIdentity.json
cathedral-blockchain/src/: cognitive.rs  consensus.rs  lib.rs  network_icmp.rs
cathedral-blockchain/tests/: b20_integration_tests.rs
cathedral-cse/: Cargo.toml
cathedral-cse/src/: lib.rs  main.rs
cathedral-llm-agent/: main.py  pyproject.toml
cathedral-llm-agent/cathedral_llm_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cathedral-llm-agent/integration/: cathedral_bridge.py
cathedral-napi/: Cargo.toml
cathedral-napi/src/: lib.rs
cathedral/bridge/: Cargo.toml  build.rs
cathedral/sdk-rs/: Cargo.toml  build.rs
crates/arkhe-desci/: Cargo.toml
crates/arkhe-security-audit/: Cargo.toml
crates/cathedral-inference-runtime/: Cargo.toml
crates/cathedral-llm-core/: Cargo.toml
crates/cathedral-plurality/: Cargo.toml
crates/cathedral-remix-bridge/: Cargo.toml
crates/cathedral-self-improve/: Cargo.toml
crates/cathedral-server/: Cargo.toml
crates/cathedral-taproot-bridge/: Cargo.toml  build.rs
safe-core/: Cargo.toml  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
safe-core/scripts/: bisect-arkhe.sh
(+842 files in other folders)
