[workspace]
members = [
    "cathedral-arkhe-crawler",
    "cathedral-orchestrator",
    "cathedral-embodied-no_std",
    "cathedral-napi",
    "aegis-plausible-reasoner",
    "aegis",
    "cathedral-core",
    "cathedral-agent",
    "cathedral/bridge",
    "cathedral/sdk-rs",
    "benches"
, "common", "crates/cathedral-xtask", "crates/cathedral-plurality"]

[workspace.dependencies]
aegis-plausible-reasoner = { path = "aegis-plausible-reasoner" }
