
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cathedral ARKHE ORCHESTRATOR <orcid:0009-0005-2697-4668>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cathedral-os/cathedral-llm"
homepage = "https://cathedral-os.org"
documentation = "https://docs.cathedral-os.org/cathedral-llm"
keywords = ["llm", "ai", "pqc", "zk", "identity", "agent"]
categories = ["science", "cryptography", "network-programming"]

[workspace]



members = [
    "crates/cathedral-llm-core",
    "crates/cathedral-inference-runtime",
    "crates/cathedral-identity",
    "crates/cathedral-reputation",
    "crates/cathedral-wormgraph",
    "crates/cathedral-zk",
    "crates/cathedral-arkheobex",
    "crates/cathedral-observer",
    "crates/cathedral-api",
    "crates/cathedral-cli",
    "crates/cathedral-benchmarks",
    "crates/cathedral-tests",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full", "tracing"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# HTTP/gRPC
axum = "0.8"
tower = "0.5"
tower-http = "0.6"
tonic = "0.13"
hyper = "1.6"

# WebSocket
tokio-tungstenite = "0.26"

# Database / Cache
dashmap = "6.1"
redis = { version = "0.29", features = ["tokio-comp"] }

# Cryptography (PQC)
ml-dsa = "0.1.1"
ml-kem = "0.1.1"
slh-dsa = "0.1.0"
ed25519-dalek = "2.1"
sha3 = "0.10"
blake3 = "1.8"

# ZK Proofs
risc0-zkvm = "2.0"
risc0-build = "2.0"

# Metrics / Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14"
opentelemetry = "0.29"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Testing
tokio-test = "0.4"
mockall = "0.13"
criterion = { version = "0.5", features = ["async_tokio"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# Utilities
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
once_cell = "1.21"
hex = "0.4"
dirs = "5.0"

# LLM / ML (placeholder)
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"

[workspace.metadata.cathedral]
model-tiers = ["pro", "plus", "standard", "lite"]
verification-levels = ["none", "light", "standard", "full"]
default-verification = "light"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
