[package]
name = "arkhe-substrato-1300"
version = "1.0.0"
edition = "2021"
authors = ["ORCID 0009-0005-2697-4668"]

[dependencies]
fastrand = "2.0"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
sha3 = { version = "0.10", default-features = false }
regex = { version = "1.10", default-features = false }

[features]
default = ["std"]
std = ["chrono/std", "serde/std", "regex/std"]
