[package]
name = "arkhe_brasil_finance"
version = "0.1.0-arkhe"
edition = "2021"

[dependencies]
quick-xml = "0.31.0"
x509-cert = "0.2.5"
sha2 = "0.10.8"
base64 = "0.22.0"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
image = "0.24.9"
qrcode = "0.13.0"
crc16 = "0.4.0"
ark-bn254 = "0.4.0"
ark-relations = "0.4.0"
ark-groth16 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs", "crh", "sponge"] }
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
ark-ff = "0.4.0"
rsa = "0.9.6"
