[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arklib"
version = "280.0"
description = "Arklib — A Biblioteca Canónica da ASI (ARKHE Code Cathedral)"
authors = [{name = "Arquiteto"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "aiohttp",
    "pyyaml",
    "websockets",
    "prometheus-client",
    "grpcio",
    "fastapi",
    "uvicorn",
    "python-dotenv",
]

[tool.setuptools]
packages = ["arklib"]
