[package]
name = "cathedral-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
axum = "0.7"
chrono = "0.4.31"
hmac = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tokio = { version = "1.34", features = ["full", "process"] }
tracing = "0.1.40"
uuid = { version = "1.6", features = ["v4"] }
wasmtime = "14.0.2"
blake3 = "1.5.0"
hex = "0.4.3"
futures = "0.3.30"
rand = "0.8.5"
