[package]
name = "cathedral-arkhe-crawler"
version = "30.3.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
thiserror = "1.0"
async-trait = "0.1"

# External Cathedral dependencies referenced in the code
cathedral-core = { path = "../cathedral-core", optional = true }
serde-big-array = "0.5.1"

[dev-dependencies]
tracing-subscriber = "0.3"
