[package]
name = "cathedral-arkhe-v26"
version = "26.5.0"
edition = "2021"
authors = ["Arquiteto ORCID 0009-0005-2697-4668"]
description = "Cathedral ARKHE v26.5 — TensorZKP GPU Daemon + CM4 + Ring Export + Status Frame + Accelerator Always-Present"
license = "MIT"
repository = "https://github.com/cathedral-arkhe/v26"

[features]
default = ["daemon"]
daemon = [
    "cudarc", "serialport", "crc32fast", "signal-hook", "ctrlc",
    "chrono", "serde", "serde_json", "std"
]
cm4 = [
    "usb-device", "usbd-serial", "stm32f4xx-hal",
    "cortex-m", "cortex-m-rt", "heapless", "blake3"
]
std = []
semihosting = ["cortex-m-semihosting"]
crc_verify = []

[[bin]]
name = "tensorzkp-daemon"
path = "src/bin/daemon.rs"
required-features = ["daemon"]

[[bin]]
name = "cathedral-cm4"
path = "src/bin/cm4.rs"
required-features = ["cm4"]

[dependencies]
# ─── Daemon dependencies ───
serialport = { version = "4.2", optional = true }
crc32fast = { version = "1.3", optional = true }
signal-hook = { version = "0.3", optional = true }
ctrlc = { version = "3.4", optional = true }
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# CUDA (daemon only)
cudarc = { version = "0.12", optional = true, features = ["nvrtc", "cuda-version-from-build-system"] }

# ─── CM4 dependencies (no_std) ───
usb-device = { version = "0.3", optional = true }
usbd-serial = { version = "0.2", optional = true }
stm32f4xx-hal = { version = "0.20", features = ["stm32f411", "usb_fs"], optional = true }
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
cortex-m-semihosting = { version = "0.5", optional = true }

# ─── Shared dependencies ───
heapless = { version = "0.8", optional = true }
blake3 = { version = "1.5", default-features = false, optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
