[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cathedral-llm-agent"
version = "28.1.0"
description = "Cathedral ARKHE LLM and Agent framework with TemporalChain integration"
authors = [
    {name = "Cathedral Arquiteto", email = "arkhe@cathedral.io"}
]
license = {text = "Proprietary - Cathedral ARKHE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "vllm>=0.6.0",               # inferência LLM otimizada
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "sentence-transformers>=2.7.0", # para RAG
    "chromadb>=0.5.0",           # banco vetorial
    "blake3>=0.3.0",             # hashing rápido
    "pywin32>=306; sys_platform == 'win32'", # para named pipe no Windows (opcional)
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "aiofiles>=23.0.0",
    "sse-starlette>=2.0.0"       # streaming de respostas
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0"
]
sphincs = ["sphincs-py>=1.0.0"]   # para assinatura pós-quântica de artefatos

[project.scripts]
cathedral-agent = "agent.core.agent_loop:main_cli"
cathedral-llm-server = "llm.server.main:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm*", "agent*", "integration*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
select = ["E", "F", "I", "C", "B", "Q", "W"]
ignore = ["E501"]  # line length handled by black

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true