[workspace]

[package]
name = "cathedral-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prost-types = "0.13"
chrono = "0.4.45"
cathedral-sdk-rs = { path = "../sdk-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
fips204 = "0.4.6"
blake3 = "1.5"

[build-dependencies]
tonic-build = "0.12"
