[workspace]

[package]
name = "cathedral-sdk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4.45"
uuid = { version = "1.23.3", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
