[package]
name = "arkhe-desci"
version = "0.2.0"
edition = "2021"
authors = ["Arkhe Research Group <team@arkhe.io>"]
license = "MIT OR Apache-2.0"
description = "Integração ARKHE × DeSciOS × nodes.desci × ORCID — governança, rastreabilidade e identidade para ciência descentralizada"
repository = "https://github.com/arkhe/agi-monorepo"
readme = "README.md"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
blake3 = "1.5"

# Async
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "fs", "process"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"], optional = true }

# Regex
regex = "1.10"

# DID / Identity (para ORCID integration)
# did-method-key = { version = "0.2", optional = true }

[features]
default = ["ipfs", "orcid"]
ipfs = ["dep:reqwest"]
orcid = ["dep:reqwest"]
sei-giga = ["dep:reqwest"]

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
