[package]
name = "cathedral-llm-core"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

serde.workspace = true
llama-cpp-2 = "0.1.150"
encoding_rs = "0.8"
tracing = "0.1"
serde_json.workspace = true
tokio.workspace = true
