[package]
name = "cathedral-remix-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.16", features = ["v4"] }
chrono = "0.4"
