[package]
name = "cathedral-self-improve"
version = "0.1.0"
edition.workspace = true

[dependencies]
cathedral-wormgraph = { path = "../cathedral-wormgraph" }
cathedral-api = { path = "../cathedral-api" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
syn = { version = "2.0", features = ["full"] }
walkdir = "2.5"
